{
    "name": "CustomInput",
    "maps": [
        {
            "name": "Player",
            "id": "2724a89e-227b-4ad3-9a7c-b03246d3f6d9",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "9b0ed88b-8017-4686-8117-2ef73845fb86",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "e7ab56ff-30a7-4f73-a19d-4f0b6e4a8770",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "a37f542e-d99d-4f76-94e9-6d3615cd1090",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Parry",
                    "type": "Button",
                    "id": "63e14d8d-8db3-494c-90e7-9a9333318881",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseQuick",
                    "type": "Button",
                    "id": "adb0ce29-42ba-456e-b212-2f58dcd31b91",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeQuick",
                    "type": "Button",
                    "id": "b3ef1260-77f2-4fd7-9cd7-443cbd4ad4b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "b19db941-02ef-4cfe-8899-222ca7505c81",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack1",
                    "type": "Button",
                    "id": "23d5f672-6e7d-4cad-83a6-34bee026b82a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack2",
                    "type": "Button",
                    "id": "a6fc517f-4563-47e7-9df4-048cc0d81a6d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "H",
                    "type": "Button",
                    "id": "81a13288-0d9f-4723-9dc8-0cd24e0c3bb3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P",
                    "type": "Button",
                    "id": "a1f0a9d4-1194-41ad-af43-648efbaf819a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "efbf7005-ba20-44be-87fb-ef9c394c27cb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "6703dd96-b4df-4772-908f-4a337e77d05c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d2fa364c-866e-4186-b641-7102d0f0be03",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "65b704e1-3861-426e-a95d-5588e5973d64",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d43a61dd-04a1-4161-bc50-5dc9d91eb126",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9660c7da-be76-41e6-af36-16f382247a26",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7caed05e-5cd7-4027-a45d-48fe1016c1b4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27ef2928-57ee-4357-b000-cf4dec65cb85",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Parry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c00e7949-ab2c-47a5-86e4-47d1cd6a8019",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "UseQuick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93df5dd4-54f6-4b17-ab57-de56773fc592",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "ChangeQuick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce93030b-4630-4127-8c3c-5c7be4255044",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98af0459-ed82-4830-815e-0061dfac02c4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99b37373-7750-4ce8-9c66-179076417cc1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "Attack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c62c7981-ec79-4ef3-8c60-2450625f877f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardAndMouse",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee2fe2e4-87d4-4bc1-b62c-485ad3617a3e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df7fc876-80e1-4bc2-9529-6767242ec6f4",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "H",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "848b0ce7-2c8f-4856-8a80-e4f7679c8349",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}